added sdl_mixer + sound service and locator

--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -208,12 +208,16 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="KeyboardInput.h" />
     <ClInclude Include="Minigin.h" />
+    <ClInclude Include="NullSoundService.h" />
     <ClInclude Include="Observer.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Singleton.h" />
+    <ClInclude Include="SDLSoundService.h" />
+    <ClInclude Include="SoundService.h" />
+    <ClInclude Include="SoundServiceLocator.h" />
     <ClInclude Include="Subject.h" />
     <ClInclude Include="Texture2D.h" />
   </ItemGroup>
@@ -239,6 +243,7 @@
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="SDLSoundService.cpp" />
     <ClCompile Include="Subject.cpp" />
     <ClCompile Include="Texture2D.cpp" />
   </ItemGroup>
