--- a/Pengo/Pengo.vcxproj
+++ b/Pengo/Pengo.vcxproj
@@ -170,6 +170,13 @@
     <ClCompile Include="MovementCommand.cpp" />
     <ClCompile Include="MovementComponent.cpp" />
     <ClCompile Include="Pengo.cpp" />
+    <ClCompile Include="PlayerComponent.cpp" />
+    <ClCompile Include="PlayerCrushingState.cpp" />
+    <ClCompile Include="PlayerDiedState.cpp" />
+    <ClCompile Include="PlayerIdleState.cpp" />
+    <ClCompile Include="PlayerMovingState.cpp" />
+    <ClCompile Include="PlayerPushingState.cpp" />
+    <ClCompile Include="PlayerWonState.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="RotatorComponent.cpp" />
     <ClCompile Include="ScoreDisplayObserverComponent.cpp" />
@@ -185,6 +192,13 @@
     <ClInclude Include="IncreaseScoreCommand.h" />
     <ClInclude Include="MovementCommand.h" />
     <ClInclude Include="MovementComponent.h" />
+    <ClInclude Include="PlayerComponent.h" />
+    <ClInclude Include="PlayerCrushingState.h" />
+    <ClInclude Include="PlayerDiedState.h" />
+    <ClInclude Include="PlayerIdleState.h" />
+    <ClInclude Include="PlayerMovingState.h" />
+    <ClInclude Include="PlayerPushingState.h" />
+    <ClInclude Include="PlayerWonState.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="RotatorComponent.h" />
     <ClInclude Include="ScoreDisplayObserverComponent.h" />
