--- a/Pengo/Pengo.vcxproj
+++ b/Pengo/Pengo.vcxproj
@@ -166,6 +166,11 @@
     <ClCompile Include="GraphComponent.cpp" />
     <ClCompile Include="HealthDisplayObserverComponent.cpp" />
     <ClCompile Include="HealthSubjectComponent.cpp" />
+    <ClCompile Include="IceCubeBreakingState.cpp" />
+    <ClCompile Include="IceCubeComponent.cpp" />
+    <ClCompile Include="IceCubeIdleState.cpp" />
+    <ClCompile Include="IceCubeMovingState.cpp" />
+    <ClCompile Include="IceCubeState.cpp" />
     <ClCompile Include="IncreaseScoreCommand.cpp" />
     <ClCompile Include="MovementCommand.cpp" />
     <ClCompile Include="MovementComponent.cpp" />
@@ -176,6 +181,7 @@
     <ClCompile Include="PlayerIdleState.cpp" />
     <ClCompile Include="PlayerMovingState.cpp" />
     <ClCompile Include="PlayerPushingState.cpp" />
+    <ClCompile Include="PlayerState.cpp" />
     <ClCompile Include="PlayerWonState.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="RotatorComponent.cpp" />
@@ -189,6 +195,11 @@
     <ClInclude Include="GraphComponent.h" />
     <ClInclude Include="HealthDisplayObserverComponent.h" />
     <ClInclude Include="HealthSubjectComponent.h" />
+    <ClInclude Include="IceCubeBreakingState.h" />
+    <ClInclude Include="IceCubeComponent.h" />
+    <ClInclude Include="IceCubeIdleState.h" />
+    <ClInclude Include="IceCubeMovingState.h" />
+    <ClInclude Include="IceCubeState.h" />
     <ClInclude Include="IncreaseScoreCommand.h" />
     <ClInclude Include="MovementCommand.h" />
     <ClInclude Include="MovementComponent.h" />
@@ -198,6 +209,7 @@
     <ClInclude Include="PlayerIdleState.h" />
     <ClInclude Include="PlayerMovingState.h" />
     <ClInclude Include="PlayerPushingState.h" />
+    <ClInclude Include="PlayerState.h" />
     <ClInclude Include="PlayerWonState.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="RotatorComponent.h" />
